// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="signUp-container"
>
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      <Title>
        Sign Up
      </Title>
      <Subtitle>
        to join the conversation
      </Subtitle>
    </Bar>
  </Localized>
  <SubBar>
    <Localized
      id="signUp-accountAvailableSignIn"
      textlink={
        <withPropsOnChange(TextLinkProps)
          href="/signIn"
          onClick={[Function]}
        />
      }
    >
      <ForwardRef(forwardRef)
        container={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        variant="bodyCopy"
      >
        Already have an account?
         
        <withPropsOnChange(TextLinkProps)
          href="/signIn"
          onClick={[Function]}
        >
          Sign In
        </withPropsOnChange(TextLinkProps)>
      </ForwardRef(forwardRef)>
    </Localized>
  </SubBar>
  <Main
    data-testid="signUp-main"
  >
    <ForwardRef(forwardRef)
      size="oneAndAHalf"
    >
      <withContext(createMutationContainer(SignUpContainer)) />
      <OrSeparator />
      <ForwardRef(forwardRef)>
        <Relay(SignUpWithFacebookContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithGoogleContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders without email sign up 1`] = `
<div
  data-testid="signUp-container"
>
  <Localized
    id="signUp-signUpToJoinHeader"
    subtitle={<Subtitle />}
    title={<Title />}
  >
    <Bar>
      <Title>
        Sign Up
      </Title>
      <Subtitle>
        to join the conversation
      </Subtitle>
    </Bar>
  </Localized>
  <Main
    data-testid="signUp-main"
  >
    <ForwardRef(forwardRef)
      size="oneAndAHalf"
    >
      <ForwardRef(forwardRef)>
        <Relay(SignUpWithFacebookContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithGoogleContainer)
          auth={Object {}}
        />
        <Relay(SignUpWithOIDCContainer)
          auth={Object {}}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;
